--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -291,6 +291,12 @@ button:hover{
 .stickyMenuNav a:hover{
   color: rgb(255,213,53);
 }
+.shop{
+  position: absolute;
+  left: 33.3vw;
+  top: 0vw;
+  padding-bottom: 15px;
+}
 
 .stickySocialMedia{
   transition: 1s;
@@ -517,21 +523,39 @@ main{
   z-index: 13;
   width: 32.96vw;
   height: 47.55vw;
+  left: -4.2vw;
   bottom: -10.5vw;;
 }
+.smoke{
+  transition: 6s;
+  opacity: 0.2;
+  position: absolute;
+  z-index: 13;
+  /* width: 32.96vw; */
+  width: 30vw;
+  left:1.45vw;
+  height: 47.55vw;
+  bottom: -10.5vw;;
+
+}
 .crayon{
+  transition: 1s;
   position: absolute;
   z-index: 13;
   width: 5.669vw;
   height: 26.832vw;
-  bottom: -0.14vw;
+  bottom: 2vw;
+  /* bottom: -0.14vw; original before animation */
   left: 18.08vw;
 }
 .crayonShadow{
+  opacity: 0.5;
+  transition: 1s;
   position: absolute;
   z-index: 13;
   left: 18.08vw;
-  bottom: -17.59vw;
+  bottom: -20vw;
+  /* bottom: -17.59vw; original before animation */
   width: 5.669vw;
   height: 17.399vw;
 }
@@ -606,8 +630,6 @@ main{
   animation-direction: alternate;
   animation-timing-function: linear;
   animation-iteration-count:infinite;
-  /* top: 0.5vw; */
-  /* left: 0.5vw; */
 }
 @keyframes triangleAnim {
   0%{
@@ -769,22 +791,6 @@ main{
   height: 27vw;
 }
 
-.whatWeDoOne{
-  /* background-image: url('../img/whatWeDo/nail-laquer.jpg'); */
-}
-.whatWeDoTwo{
-  /* background-image: url('../img/whatWeDo/lips.jpg'); */
-}
-.whatWeDoThree{
-  /* background-image: url('../img/whatWeDo/eyes.jpg'); */
-}
-.whatWeDoFour{
-  /* background-image: url('../img/whatWeDo/skin-care.jpg'); */
-}
-.whatWeDoFive{
-  /* background-image: url('../img/whatWeDo/liquid-powder.jpg'); */
-}
-
 .whatWeDoTextBox{
   position: absolute;
   bottom: 0px;
@@ -847,7 +853,6 @@ main{
 }
 
 .growth{
-  /* background-image: url('../img/growth.jpg'); */
   position: absolute;
   margin: 0;
   left: 4.08vw;
@@ -922,24 +927,6 @@ main{
   height: 93%;
 }
 
-.olay{
-  /* background-image: url('../img/six-image-grid/olay.jpg'); */
-}
-.sede{
-  /* background-image: url('../img/six-image-grid/sede.jpg'); */
-}
-.gucci{
-  /* background-image: url('../img/six-image-grid/gucci.jpg'); */
-}
-.cc{
-  /* background-image: url('../img/six-image-grid/cc.jpg'); */
-}
-.parfume{
-  /* background-image: url('../img/six-image-grid/parfume.jpg'); */
-}
-.flower{
-  /* background-image: url('../img/six-image-grid/flower.jpg'); */
-}
 
 .greatBuysButton{
   position: absolute;
@@ -1083,7 +1070,6 @@ main{
   left:0.2vw;
   font-size: 2vw;
   font-weight: 800;
-  /* transform: scale(1,1.2); */
 }
 .littleArroHtml:hover{
   color: rgb(210,200,197);
@@ -1157,7 +1143,6 @@ font-weight: 900;
   bottom: 0px;
   width: 23.23vw;
   height: 30.734vw;
-  /* background-image: url('../img/png/lipstick.png'); */
 }
 .blurBox{
   z-index: 2;
@@ -1210,15 +1195,6 @@ font-weight: 900;
   height: 75%;
   width: 100%;
 }
-
-/* .firstCarPicOne{background-image: url('../img/png/car-one/carPicOne.png');} */
-/* .firstCarPicTwo{background-image: url('../img/png/car-one/carPicTwo.png');} */
-/* .firstCarPicThree{background-image: url('../img/png/car-one/carPicThree.png');} */
-/* .firstCarPicFour{background-image: url('../img/png/car-one/carPicFour.png');} */
-/* .firstCarPicFive{background-image: url('../img/png/car-one/carPicFive.png');} */
-/* .firstCarPicSix{background-image: url('../img/png/car-one/carPicOne.png');} */
-/* .firstCarPicSeven{background-image: url('../img/png/car-one/carPicTwo.png');} */
-
 
 .arrow{
   position: absolute;
@@ -1274,14 +1250,6 @@ font-weight: 900;
   box-shadow: inset 0px 0px 1.2vw 0.9vw rgb(249,216,193);
 }
 
-/* .bestSellers .firstCarPicOne{background-image: url('../img/png/car-two/carTwoPicOne.png');} */
-/* .bestSellers .firstCarPicTwo{background-image: url('../img/png/car-two/carTwoPicTwo.png');} */
-/* .bestSellers .firstCarPicThree{background-image: url('../img/png/car-two/carTwoPicThree.png');} */
-/* .bestSellers .firstCarPicFour{background-image: url('../img/png/car-two/carTwoPicFour.png');} */
-/* .bestSellers .firstCarPicFive{background-image: url('../img/png/car-two/carTwoPicFive.png');} */
-/* .bestSellers .firstCarPicSix{background-image: url('../img/png/car-two/carTwoPicOne.png');} */
-/* .bestSellers .firstCarPicSeven{background-image: url('../img/png/car-two/carTwoPicTwo.png');} */
-
 /* trending section */
 .trendingLooksSection{
   transition: 1s;
@@ -1310,7 +1278,6 @@ font-weight: 900;
 }
 
 .trendingLooksSection .leftImage{
-  /* background-image: url('../img/png/handsPng.png'); */
   bottom:-2.227vw;
   height: 34.15vw;
 }
@@ -1328,9 +1295,6 @@ font-weight: 900;
   height: 22.27vw;
   margin-left: 1.85vw;
 }
-/* .trendingPicOne{background-image: url('../img/trendingPicOne.jpg');} */
-/* .trendingPicTwo{background-image: url('../img/trendingPicTwo.jpg');} */
-/* .trendingPicThree{background-image: url('../img/trendingPicThree.jpg');} */
 
 /* INSTAGRAM SECTION */
 .gridBoxSpecial{
@@ -1372,27 +1336,22 @@ font-weight: 900;
 .gridBoxSpecial div:nth-child(2){
   grid-row: 1/4;
   grid-column: 2/3;
-  /* background-image: url('../img/instagram-grid/bigPicGrid.jpg'); */
 }
 .gridBoxSpecial div:nth-child(3){
   grid-row: 1/2;
   grid-column: 3/4;
-  /* background-image: url('../img/instagram-grid/topRight.jpg'); */
 }
 .gridBoxSpecial div:nth-child(4){
   grid-row: 2/3;
   grid-column: 3/4;
-  /* background-image: url('../img/instagram-grid/rightMid.jpg'); */
 }
 .gridBoxSpecial div:nth-child(5){
   grid-row: 3/4;
   grid-column: 3/4;
-  background-image: url('../img/instagram-grid/rightBot.jpg');
 }
 .gridBoxSpecial div:nth-child(6){
   grid-row: 3/4;
   grid-column: 1/2;
-  background-image: url('../img/instagram-grid/parfume.jpg');
 }
 
 /*  SECTION NEWS AND EVENTS */
@@ -1448,9 +1407,6 @@ font-weight: 900;
   width: 100%;
   height:51.28%;
 }
-/* .carDivOne{background-image: url('../img/car-three/picOne.jpg');} */
-/* .carDivTwo{background-image: url('../img/car-three/picTwo.jpg');} */
-/* .carDivThree{background-image: url('../img/car-three/picThree.jpg');} */
 
 .yellowSquareContainer{
   margin-top: 2.59vw;
@@ -1485,8 +1441,6 @@ font-weight: 900;
   line-height: 1.6vw;
   margin-bottom: 2.5vw;
 }
-
-
 
 .carThreeArrowContainer{
   position: relative;
@@ -1579,7 +1533,6 @@ font-weight: 900;
   height: 35vw;
   margin-left: 50%;
   left: -11.4vw;
-  /* background-image: url('../img/png/BBcream.png'); */
   top: 11.5vw;
 }
 
@@ -1791,7 +1744,6 @@ footer span{
   .lineDownAnim{
     top:85vh;
     left: 50vw;
-    /* bottom: 5vw; */
   }
   /* BRIDAL SECTION */
 
