--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,6 +73,99 @@ button{
 button:hover{
   cursor: pointer;
 }
+/* shoping cart checkout */
+  .shopingCheckout{
+    transition: 2s;
+    position: relative;
+    width: 44vw;
+    min-height: 28.59vw;
+    height: auto;
+    background: rgb(243,235,226);
+    position: fixed;
+    right: -44vw;
+    top: 0;
+    z-index: 25;
+    border-bottom-left-radius: 5px;
+  }
+  .cartCheckout{
+    filter: hue-rotate(116deg);
+    background-image: url('../img/png/cart.png');
+    margin: 1vw;
+    width: 2.5vw ;
+    height: 2.2vw ;
+  }
+  .myCartContainer{
+    border-bottom: 1px solid rgb(230,230,230);
+    display: flex;
+    font-size: 1.33vw;
+  }
+  .checkoutX{
+    color: rgb(60,60,60);
+    margin: 0;
+    position: absolute;
+    font-size: 2vw;
+    right: 1vw;
+    top: 0.5vw;
+  }
+  .checkoutX:hover{
+    cursor: pointer;
+  }
+  .item{
+    width: 100%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid rgb(230,230,230);
+    padding-bottom: 1vw;
+  }
+  .item img{
+    margin-left: 1vw;
+    margin-right: 2vw;
+    width: 1.5vw;
+    height: 4vw;
+  }
+  .itemPriceInput{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .inpt{
+    background: white;
+    margin-left: 1vw;
+    height: 1.5vw;
+    width: 1.3vw;
+    padding-top: 0.3vw;
+    padding-left: 0.7vw;
+  }
+  .plus{
+    color: green;
+    margin-left: 1vw;
+  }
+  .minus{
+    color: red;
+    margin-left: 1vw;
+  }
+  .plus:hover,
+  .minus:hover{
+    cursor: pointer;
+  }
+  .discard{
+    width: 1.4vw;
+    height: 1.4vw;
+    margin-right: 1vw;
+    background: red;
+    border-radius: 0.5vw;
+  }
+  .discard:hover{
+    cursor: pointer;
+  }
+  .discard p{
+    font-size: 1vw;
+    margin: 0;
+    margin-left: 0.25vw;
+  }
+/* shoping cart checkout END */
 
 /* sticky menu */
 .stickyBackgroundLayer{
