--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,6 @@
+html {
+  scroll-behavior: smooth;
+}
 /* font-family: 'Oranienbaum', serif; */
 @font-face {
   font-family: 'WorkSans-Hairline';
@@ -2133,6 +2136,7 @@ footer span{
     width: 10%;
     overflow: hidden;
     background-color: rgb(240,212,199);
+    cursor: pointer;
   }
   .mobileArrow{
     width: 10vw;
@@ -2427,5 +2431,16 @@ footer span{
   }
   .regularPriceTextBox p{
     font-size: 4.375vw;
+  }
+  .arrowToTop{
+    width: 4.89vw;
+    height: 4.89vw;
+  }
+  .arrowToTop p {
+    margin: 0 !important;
+    font-size: 4vw;
+    font-weight: 600;
+    transform: scale(0.7,1.3);
+    color: #d16381;
   }
 }
